@@ -2,8 +2,8 @@ VERSION = 1.2.10-beta
 COPYRIGHT = Copyright\ smeghead\ 2007\ -\ 2009
 CC = gcc
 CC_VERSION = ${shell gcc --version | grep 'gcc.*[0-9]\.' | sed -e 's/gcc[^0-9]*\([0-9]\).*/\1/g'}
-CFLAGS = -I/usr/include -I/usr/local/include -I. -DVERSION=\"${VERSION}\" -DCOPYRIGHT=\"${COPYRIGHT}\" -O3 -Wall
-LFLAGS = -L/usr/lib -L/usr/local/lib -lsqlite3 -lcgic
+CFLAGS = -I/usr/include -I/usr/local/include -I${HOME}/include -I. -DVERSION=\"${VERSION}\" -DCOPYRIGHT=\"${COPYRIGHT}\" -O3 -Wall
+LFLAGS = -L/usr/lib -L/usr/local/lib -I${HOME}/include -lsqlite3 -lcgic
 ifeq ($(CC_VERSION), 3)
 	CFLAGS += -W
 endif
@@ -14,6 +14,10 @@ OS = ${shell uname}
 ifeq ($(OS), Linux)
 	LFLAGS += -ldl
 endif
+ifeq ($(OS), FreeBSD)
+	LFLAGS += -lintl
+endif
+
 ifeq ($(OS), CYGWIN_NT-5.1)
 	LFLAGS += -static
 endif
