@@ -1,3 +1,11 @@
+2009-07-18  smeghead <smeghead@users.sourceforge.jp>
+
+    * FreeBSD(さくらインターネット)でsetlocaleが機能しなかったため、setenvにて環境変数を更新するように修正した。
+
+2009-07-17  smeghead <smeghead@users.sourceforge.jp>
+
+    * Makefileで、FreeBSDの場合、LFLAGSに-lintlを追加するように修正した。
+
 2009-07-16  smeghead  <smeghead@smeghead-laptop>
 
     * 1.2.10-bataリリース
